changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

lib/checkarch.pl:  New perl script to check the archetypes file for
obvious bugs (like object that is alive but doesn't have a level).
- Jan Echternach 4/17/2000

include/spellist.h:  "meteor swarm" is now a missile spell (PATH_MISSILE)
just like "comet".  - Jan Echternach 4/17/2000

server/spell_util.c: path_level_mod():  Rewrote to fix countless bugs.
New interface with explicit base level parameter.
server/spell_effect.c: finger_of_death():  Call path_level_mod() with
correct base level.
server/spell_util.c: casting_level():  New function that combines
SK_level() with path_level_mod().
- Jan Echternach 4/17/2000

server/spell_util.c:  Several cosmetic changes (spell type parameter name
is spell_type, arch_to_object(get_archtetype(...)) is equivalent to
get_archetype(...), use casting_level() if applicable).
- Jan Echternach 4/17/2000

server/spell_util.c: fire_swarm():  New 'caster' parameter because
owner and caster can be different.  Level of the swarm object is casting
level of the caster, not overall level of the owner.
server/spell_util.c: fire_arch_from_position():  Set level of fired
arch to casting level of caster.
server/spell_util.c: cast_cone(), cast_smite_spell(): Set level of spell
object to casting_level() and not SK_level() to honour path_attuned and
path_repelled of the caster.
server/spell_util.c: move_cone():  Just copy the level for new cone
objects.

Missing level meant AT_DEATH didn't work, missing call to
path_level_mod()/casting_level() meant path_attuned/path_repelled was
ignored.  - Jan Echternach 4/17/2000 
